# kyber-JNI

./: CMakeLists.txt  LICENSE  README.md
jni/: CMakeLists.txt
jni/android/: CMakeLists.txt
jni/java/ref/network/beechat/: Kyber512.java
jni/java/ref_lin/network/beechat/: Kyber512.java  Kyber512_90s.java
jni/java/ref_win/network/beechat/: Kyber512.java  Kyber512_90s.java
jni/ref/: CMakeLists.txt  kem.c  kem_90s.c  network_beechat_Kyber512.h  network_beechat_Kyber512_90s.h
src/: README.md  manifest.mf
src/network/beechat/: Base58.java  TestScript.java  Utility.java
test/: Makefile  manifest.mf
test/android/: AndroidManifest.xml  build_apk.sh  keystore.jks
test/android/java/net/test/: Base58.java  Kyber512.java  Kyber512_90s.java  MainActivity.java
test/android/res/layout/: activity_main.xml
test/network/beechat/: Kyber512.java  Kyber512_90s.java  Main.java
toolchains/android-sdk-linux/tools/: NOTICE.txt  emulator  emulator-ranchu-arm64  emulator-ranchu-mips64  emulator64-ranchu-mips64
toolchains/android-sdk-linux/tools/bin64/: fsck.ext4  mkfs.ext4  resize2fs  tune2fs
toolchains/android-sdk-linux/tools/lib/monitor-x86/: artifacts.xml
toolchains/android-sdk-linux/tools/lib/monitor-x86/configuration/: config.ini
toolchains/android-sdk-linux/tools/lib/monitor-x86/configuration/org.eclipse.update/: platform.xml
toolchains/android-sdk-linux/tools/lib/monitor-x86/features/com.android.ide.eclipse.ddms.feature_24.4.1.2337206/: feature.xml
toolchains/android-sdk-linux/tools/lib/monitor-x86/features/com.android.ide.eclipse.hierarchyviewer.feature_24.4.1.2337206/: feature.xml
toolchains/android-sdk-linux/tools/lib/monitor-x86/p2/org.eclipse.equinox.p2.core/cache/: artifacts.xml
toolchains/android-sdk-linux/tools/lib/monitor-x86/p2/org.eclipse.equinox.p2.core/cache/binary/: monitorproduct.executable.gtk.linux.x86_24.4.1.2337206
toolchains/android-sdk-linux/tools/lib/monitor-x86/p2/org.eclipse.equinox.p2.engine/profileRegistry/DefaultProfile.profile/.data/org.eclipse.equinox.internal.p2.touchpoint.eclipse.actions/: jvmargs
toolchains/android-sdk-linux/tools/lib/monitor-x86_64/: artifacts.xml
toolchains/android-sdk-linux/tools/lib/monitor-x86_64/configuration/: config.ini
toolchains/android-sdk-linux/tools/lib/monitor-x86_64/configuration/org.eclipse.update/: platform.xml
toolchains/android-sdk-linux/tools/lib/monitor-x86_64/features/com.android.ide.eclipse.gldebugger.feature_24.4.1.2337206/: feature.xml
toolchains/android-sdk-linux/tools/lib/monitor-x86_64/features/com.android.ide.eclipse.monitor.feature_24.4.1.2337206/: feature.xml
toolchains/android-sdk-linux/tools/lib/monitor-x86_64/features/com.android.ide.eclipse.traceview.feature_24.4.1.2337206/: feature.xml
toolchains/android-sdk-linux/tools/lib/monitor-x86_64/p2/org.eclipse.equinox.p2.core/cache/: artifacts.xml
toolchains/android-sdk-linux/tools/lib/monitor-x86_64/p2/org.eclipse.equinox.p2.core/cache/binary/: monitorproduct.executable.gtk.linux.x86_64_24.4.1.2337206
toolchains/android-sdk-linux/tools/lib/monitor-x86_64/p2/org.eclipse.equinox.p2.engine/profileRegistry/DefaultProfile.profile/.data/org.eclipse.equinox.internal.p2.touchpoint.eclipse.actions/: jvmargs
